force-app/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <description>Shows the ultimate parent, up to  8 levels.</description>
    <formula>if(isblank(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id), /* Great Great Great Great Great Great Grandparent*/
if(isblank(Parent.Parent.Parent.Parent.Parent.Parent.Id), /* Great Great Great Great Great Grandparent */
if(isblank(Parent.Parent.Parent.Parent.Parent.Id), /* Great Great Great Great Grandparent */
if(isblank(Parent.Parent.Parent.Parent.Id), /* Great Great Great Grandparent */
if(isblank(Parent.Parent.Parent.Id), /* Great Great Grandparent */
if(isblank(Parent.Parent.Id), /* Great Grandparent */
if(isblank(Parent.Id), /* Parent */
Name /* Default Case*/
, Parent.Name) /* Parent */
, Parent.Parent.Name) /* Great Grandparent */
, Parent.Parent.Parent.Name) /* Great Great Grandparent */
, Parent.Parent.Parent.Parent.Name) /* Great Great Great Grandparent */
, Parent.Parent.Parent.Parent.Parent.Name) /* Great Great Great Great Grandparent */
, Parent.Parent.Parent.Parent.Parent.Parent.Name) /* Great Great Great Great Great Grandparent */
, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) /* Great Great Great Great Great Great Grandparent */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>