force-app/main/default/objects/Account/fields/Unnatural_right_of_disposal_in_bank__c.field-meta.xml
<CustomField>
    <fullName>Unnatural_right_of_disposal_in_bank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Does the customer have unnatural persons who disposes bank accounts? Unnatural person is to be understood as any person who typically should not have access to dispose bank accounts.</inlineHelpText>
    <label>Unnatural right of disposal in bank?</label>
    <type>Checkbox</type>
</CustomField>