force-app/main/default/objects/Account/fields/VIEW_is_in_close_relationships__c.field-meta.xml
<CustomField>
    <fullName>VIEW_is_in_close_relationships__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Do you know of any relationship between any employee and the customer? This includes relatives and close associates (RCA), or any other relationship that could impact VIEW’s ability to carry out duties in accordance with laws/regulations</inlineHelpText>
    <label>VIEW is in close relationships?</label>
    <type>Checkbox</type>
</CustomField>