force-app/main/default/objects/Account/fields/What_is_the_risk_of_money_laundering__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_risk_of_money_laundering__c</fullName>
    <inlineHelpText>Make an assessment of the risk of transactions related to dividends from criminal offenses or terrorist financing, where the risk is assessed based on customer, product or transaction type (eg cash). Public sector not except.</inlineHelpText>
    <label>What is the risk of money laundering?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medium Risk</fullName>
                <label>Normal Risk</label>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
                <isActive>false</isActive>
                <label>Low Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>