force-app/main/default/objects/Account/fields/XGL__c.field-meta.xml
<CustomField>
    <fullName>XGL__c</fullName>
    <label>XGL</label>
    <length>128</length>
    <type>Text</type>
</CustomField>