force-app/main/default/objects/Account/validationRules/AccountOwner_change.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountOwner_change</fullName>
    <active>false</active>
    <description>00e1t000001UNCv = System Administrator</description>
    <errorConditionFormula>ISCHANGED(OwnerId)
&amp;&amp;
PRIORVALUE(OwnerId) &lt;&gt; $User.Id
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1t000001UNCv&quot;</errorConditionFormula>
    <errorMessage>Account Owner can only be changed by current Account Owner or a System Administrator.</errorMessage>
</ValidationRule>