force-app/main/default/objects/Account/validationRules/Active_PEP_cannot_have_Normal_Risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_PEP_cannot_have_Normal_Risk</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PEP__c, &apos;Yes_Active_PEP&apos;)
&amp;&amp;
ISPICKVAL(What_is_the_risk_of_money_laundering__c, &apos;Medium Risk&apos;)</errorConditionFormula>
    <errorMessage>The risk of money laundering cannot be set to Normal with an active PEP.</errorMessage>
</ValidationRule>