force-app/main/default/objects/Account/validationRules/Approval_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Status_Validation</fullName>
    <active>false</active>
    <description>Only approval process og system administrator are allowed to change the approval status value.</description>
    <errorConditionFormula>ISCHANGED(ApprovalStatus__c)
&amp;&amp;
$User.ProfileId &lt;&gt;  $Label.SysAdmin_Profile</errorConditionFormula>
    <errorDisplayField>ApprovalStatus__c</errorDisplayField>
    <errorMessage>You do not have the level of permission to change Risk Approval Status.</errorMessage>
</ValidationRule>