force-app/main/default/objects/Account/validationRules/Authorized_Accountant.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorized_Accountant</fullName>
    <active>true</active>
    <description>It is not allowed to change Authorized Accountant on Account</description>
    <errorConditionFormula>ISCHANGED(Assignment_Responsible__c)
&amp;&amp;
Bypass_Validation_Rule__c = False</errorConditionFormula>
    <errorMessage>Authorized Accountant can only be changed from Kontrakt</errorMessage>
</ValidationRule>