force-app/main/default/objects/Account/validationRules/OrgNumber_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>OrgNumber_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Type)
&amp;&amp;
ISPICKVAL(PRIORVALUE(Type), &quot;Prospect&quot;) 
&amp;&amp; 
ISBLANK(Org_Number__c)</errorConditionFormula>
    <errorDisplayField>Org_Number__c</errorDisplayField>
    <errorMessage>Org.Number is mandatory</errorMessage>
</ValidationRule>