force-app/main/default/objects/Account/validationRules/Reason_For_Deactivation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_For_Deactivation</fullName>
    <active>false</active>
    <errorConditionFormula>Deactivated__c = True
&amp;&amp;
ISPICKVAL(Reason_For_Deactivation__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Reason for deactivation is mandatory</errorMessage>
</ValidationRule>