force-app/main/default/objects/Account/validationRules/ReasonForTerminationV2.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonForTerminationV2</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(Termination_date__c)
&amp;&amp;
ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) = &quot;&quot;)
||
(ISBLANK(Termination_date__c)
&amp;&amp;
!ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) = &quot;&quot;)
||
(ISBLANK(Termination_date__c)
&amp;&amp;
ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) != &quot;&quot;)
||
(!ISBLANK(Termination_date__c)
&amp;&amp;
!ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) = &quot;&quot;)
||
(!ISBLANK(Termination_date__c)
&amp;&amp;
ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) != &quot;&quot;)
||
(ISBLANK(Termination_date__c)
&amp;&amp;
!ISBLANK(Termination_end_date__c)
&amp;&amp;
TEXT(Reason_for_termination__c) != &quot;&quot;)</errorConditionFormula>
    <errorMessage>All termination fields must have a value.</errorMessage>
</ValidationRule>