force-app/main/default/objects/Account/validationRules/Red_flag_revenue_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Red_flag_revenue_check</fullName>
    <active>true</active>
    <description>If red flag is checked then enter revenue</description>
    <errorConditionFormula>AND(Red_Flag__c = TRUE,OR(ISBLANK( Red_Flag_Revenue_LTM__c)))</errorConditionFormula>
    <errorDisplayField>Red_Flag_Revenue_LTM__c</errorDisplayField>
    <errorMessage>You need to enter revenue for last twelve months</errorMessage>
</ValidationRule>