force-app/main/default/objects/Account/validationRules/Revenue_Last_12Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Last_12Month</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL(Revenue_last_12_month__c)
&amp;&amp;
ISBLANK( Termination_end_date__c)</errorConditionFormula>
    <errorMessage>Revenue last 12 months is dependant of the termination fields.</errorMessage>
</ValidationRule>