force-app/main/default/objects/Account/validationRules/TE_cannot_be_grater_than_TED.validationRule-meta.xml
<ValidationRule>
    <fullName>TE_cannot_be_grater_than_TED</fullName>
    <active>true</active>
    <errorConditionFormula>Termination_date__c  &gt; Termination_end_date__c</errorConditionFormula>
    <errorDisplayField>Termination_date__c</errorDisplayField>
    <errorMessage>Termination date cannot be grater than Termination End Date.</errorMessage>
</ValidationRule>