force-app/main/default/objects/Account/validationRules/TerminationCommentWhenOtherReason.validationRule-meta.xml
<ValidationRule>
    <fullName>TerminationCommentWhenOtherReason</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Reason_for_termination__c) = &quot;Other&quot;
&amp;&amp;
ISBLANK(Termination_Comment__c)</errorConditionFormula>
    <errorDisplayField>Termination_Comment__c</errorDisplayField>
    <errorMessage>Termination comment is mandatory when &quot;Other&quot; is selected as reason for termination.</errorMessage>
</ValidationRule>