force-app/main/default/objects/Account/listViews/DESKSCMT__Migrated_Accounts.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Migrated_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Firm__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Desk_Migrated_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Migrated Accounts</label>
</ListView>