force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Project_Number_Operational__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Company_Type__c</columns>
    <columns>Assignment_Responsible__c</columns>
    <columns>Support_Agreement__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Deactivated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Accounts</label>
</ListView>